--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -5,13 +5,16 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753643.md#1">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751714.md#1">【新闻看点】危机来了？官称过紧日子及防暴动</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761178.md#1">海风：新年新定义</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761161.md#1">周晓辉：上波罗的海两国黑名单 中南海再受挫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761132.md#1">颜丹：中国“暴力伤医”为何异于全球</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761018.md#1">王友群：解体中共 万象更新</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760950.md#1">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760402.md#1">陆言：医生被杀案是中共治下恶果的冰山一角</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md#1">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760290.md#1">袁斌：香港花季少女之死告诉你中共有多邪</a><br>
@@ -19,9 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760118.md#1">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759935.md#1">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759583.md#1">【名家专栏】美国真正的“自由红利”是什么</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11714048.md#1">60国海外法轮功学员恭祝李洪志师父新年好</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761169.md#1">视频：武汉飞台湾航班 检疫人员登机检疫</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761144.md#1">王赫：习近平命运之择与三句古语</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br>
@@ -41,9 +42,9 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760571.md#1">学者：反渗透法照妖镜 大师链撤离台湾</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760743.md#1">惧人数破200万纪录 港警腰斩游行毁承诺</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761021.md#1">展望2020大陆经济：“三驾马车”全瘫</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759086.md#1">【十字路口】反渗透法过关 3疑点曝中共心慌</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757710.md#1">谢师恩 大陆法轮功学员祝李大师新年好</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
@@ -74,7 +75,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758448.md#1">2019陆企违约逾1400亿 遍及28省 北京最多</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757910.md#1">反渗透法过关 专家吁加细则阻中共染红媒体</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11756981.md#1">法轮大法纽约旗队学员 新年谢师恩</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756072.md#1">中共利用升旗仪式欲染红费城 华人斥荒唐</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758277.md#1">中共统战渗透台湾 六大手段</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11758457.md#1">中共机关大院内窝藏卖淫点</a><br>
