--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746914.md#1" target="_blank">鼠年话鼠：灵鼠和钱鼠</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11746914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ce0d55c815bdbc3448eba20fdf960c89-320x200.png" align ="left"></a>鼠年话鼠，它可以是灵鼠、黠鼠、义鼠、钱鼠、善鼠、报恩鼠。有趣、奇趣的中国民间传说被古籍留下来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:32 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748439.md#1" target="_blank">天地清明引(155) 东流水－十年生死1</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>金山本在尚书府，接郭络罗密令，唆使百姓涌入王庭，制造混乱。未知结果如何，整夜于中堂踱步。几次派人出去打探，皆石沉大海，黎明将至，好容易有人回转府中，言王庭戒严，街市布满兵部之人。再三询问，胜负不置可否。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756323.md#1" target="_blank">清朝人冥界见闻：人心生一念 天地尽皆知</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11756323.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1603152303261497-150x120.jpg" align ="left"></a>清代一个住在北村名叫郑苏仙的人，一天晚上梦见自己到了冥府，看见阎罗王正在登记审判刚抓到冥界之人。其中一个邻村的老妇人来到大殿后，阎王一改严肃的面容还向其拱手，并赐了一杯茶，然后下令冥吏将她送到一个好人家转生去。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 1:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760924.md#1" target="_blank">五律：风土</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760924.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/download-1-1-150x120.png" align ="left"></a>星分九州美，人作好春光。 风土秀千色，云山独一方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/7/7/20/n1778259.md#1" target="_blank">古文赏读：《太宗手诏答魏徵》</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/7/7/20/n1778259.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/20160221000640-94077-150x120.jpg" align ="left"></a>唐太宗尝言：“至如隋炀帝暴虐，臣下钳口，卒令不闻其过，遂至灭亡，虞世基等寻亦诛死”。如果有这样的一个暴政，不仅“防民之口”，官员们还肉麻的为暴政歌“功”颂“德”，这样的政权又能维持多久呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 12:20 AM			</td></tr>
@@ -29,7 +30,11 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745673.md#1" target="_blank">父梦桂树 子梦黄鹤 奇梦超前预言一生</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1312252136572483-150x120.jpg" align ="left"></a>明朝良相顾鼎臣没有出生之前，他的父亲顾恂偶做一梦，梦中移植桂树。鼎臣出生长大后，曾梦到黄鹤凌空飞来，留下批文“田单火牛”。这二个梦串在一起，竟是一个准确的预言，预兆了顾鼎臣一生中的几个重要时刻。人还未出生，就已为他准备好了人生“剧本”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11731628.md#1" target="_blank">清代围棋国手江君辅 被骗卖转祸为福</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11731628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/1708011731272483-e1502867622988-150x120.jpg" align ="left"></a>江君辅是清朝婺源人，从小就善于下棋，被称为“国手”。在他十七岁那年遭遇了一件离奇怪事，他因棋艺了得，转祸为福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/7/12/24/n1952747.md#1" target="_blank">艺术的时空之旅（十一）传统油画技法探究（四）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/7/12/24/n1952747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Francois-Louis-Joseph_Watteau_001-150x120.jpg" align ="left"></a>在绘画中，对于每一个环节的处理上尽量保持一定的简单方便相对来讲是很重要的。因为在每一步骤中的目的单一一点儿就容易专心致志以达到成功。比如说在白纸上画一个什么东西，如果什么辅助线、大体形状、整体计划都没有，一上来在一遍之内就要求全因素全部到位那就太难了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank">美失窃小狗现身千里外 15人接力开车送回家</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-103200745-150x120.jpg" align ="left"></a>美国蒙大拿州一只小狗被窃贼偷走，并被带到2,000英里（3,219公里）之外的地方。在动物收容所的号召下，15名志工以接力的方式开车送它回家，让它得以在圣诞佳节之前与主人团聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761463.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
+研究犹太文化可以激醒浅睡中的“磁气文化 ”——中国文化中的“金神文化”（2-2）
+上篇文章介绍中，提到中国民族事实上仅差一步之遥，实际是地表上的稀有的磁“气”超强民族，而不是外国人称的轻击可碎的磁“器”民族。两者相距太远了！ 不是万里之遥！
+
+磁“器”易碎而不勘一击，形容一个民族，等于给人故意戴错冠，并且很大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760453.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》（二）</a><br></h3> 先贤风雅见真章，典律东宁鲁殿光， 三百珠玑无俗韵，海隅诗史共流芳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760446.md#1" target="_blank">诗歌：新年</a><br></h3> 一梦旧岁雪初晴 又闻新年笑语盈 几多缘厚今生遇 但愿真相伴君明......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753121.md#1" target="_blank">五律：彩虹</a><br></h3> 黑夜依然夜，黎明仍未明。 一命交生死，十年当死生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:12 AM			</td></tr>
