--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761615.md#1">夏林：以天灭中共为主线的2019年大事</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761178.md#1">海风：新年新定义</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760950.md#1">陈思敏：中共证监会带头违法 A股成中产掩埋场</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747470.md#1">为中共效力的红色特工 后来怎么样了（2）</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759747.md#1">横河：台湾反渗透法对两岸的冲击</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759583.md#1">【名家专栏】美国真正的“自由红利”是什么</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759180.md#1">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -43,7 +43,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760983.md#1">美中第二阶段贸易谈判 一个重中之重议题</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760960.md#1">重庆突发火灾 30层住宅楼从底烧到顶</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761329.md#1">大陆火车票抢票软件赛黄牛党 收费藏猫腻</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1">山西老板遗书曝光?控诉滴滴黑车垄断</a><br>
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761290.md#1">山西老板遗书曝光  控诉滴滴黑车垄断</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760936.md#1">大陆民众新年感谢法轮功 问候李大师</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11761168.md#1">疑挖煤掏空地下 山西40多户房屋突现裂缝</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ublry267/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,075,756 人
+- 共 349,077,971 人
 ```
 </strong>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
